frontend/src/parser/QingParser.js
// Generated from Qing.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var QingListener = require('./QingListener').QingListener;
var QingVisitor = require('./QingVisitor').QingVisitor;

var grammarFileName = "Qing.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'function'", "'{'", "'}'", "','", "'while'", 
                     "';'", "'if'", "'else'", null, null, "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'>'", "'>='", "'<'", "'<='", 
                     "'='", "'=='", "'!='", "'.'", "'^'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      "VARIABLE", "SCIENTIFIC_NUMBER", "LPAREN", "RPAREN", 
                      "PLUS", "MINUS", "TIMES", "DIV", "GT", "GTE", "LT", 
                      "LTE", "EQ", "EQUIV", "NEQUIV", "POINT", "POW", "WS" ];

var ruleNames =  [ "fnct", "arglist", "fbody", "whileStmt", "whileBody", 
                   "assignmentBlock", "assignment", "conditional", "condition", 
                   "expression", "atom", "scientific", "variable", "relop" ];

function QingParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

QingParser.prototype = Object.create(antlr4.Parser.prototype);
QingParser.prototype.constructor = QingParser;

Object.defineProperty(QingParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

QingParser.EOF = antlr4.Token.EOF;
QingParser.T__0 = 1;
QingParser.T__1 = 2;
QingParser.T__2 = 3;
QingParser.T__3 = 4;
QingParser.T__4 = 5;
QingParser.T__5 = 6;
QingParser.T__6 = 7;
QingParser.T__7 = 8;
QingParser.VARIABLE = 9;
QingParser.SCIENTIFIC_NUMBER = 10;
QingParser.LPAREN = 11;
QingParser.RPAREN = 12;
QingParser.PLUS = 13;
QingParser.MINUS = 14;
QingParser.TIMES = 15;
QingParser.DIV = 16;
QingParser.GT = 17;
QingParser.GTE = 18;
QingParser.LT = 19;
QingParser.LTE = 20;
QingParser.EQ = 21;
QingParser.EQUIV = 22;
QingParser.NEQUIV = 23;
QingParser.POINT = 24;
QingParser.POW = 25;
QingParser.WS = 26;

QingParser.RULE_fnct = 0;
QingParser.RULE_arglist = 1;
QingParser.RULE_fbody = 2;
QingParser.RULE_whileStmt = 3;
QingParser.RULE_whileBody = 4;
QingParser.RULE_assignmentBlock = 5;
QingParser.RULE_assignment = 6;
QingParser.RULE_conditional = 7;
QingParser.RULE_condition = 8;
QingParser.RULE_expression = 9;
QingParser.RULE_atom = 10;
QingParser.RULE_scientific = 11;
QingParser.RULE_variable = 12;
QingParser.RULE_relop = 13;

function FnctContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_fnct;
    this.fname = null; // VariableContext
    this.args = null; // ArglistContext
    this.body = null; // FbodyContext
    return this;
}

FnctContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FnctContext.prototype.constructor = FnctContext;

FnctContext.prototype.LPAREN = function() {
    return this.getToken(QingParser.LPAREN, 0);
};

FnctContext.prototype.RPAREN = function() {
    return this.getToken(QingParser.RPAREN, 0);
};

FnctContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

FnctContext.prototype.arglist = function() {
    return this.getTypedRuleContext(ArglistContext,0);
};

FnctContext.prototype.fbody = function() {
    return this.getTypedRuleContext(FbodyContext,0);
};

FnctContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterFnct(this);
	}
};

FnctContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitFnct(this);
	}
};

FnctContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitFnct(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.FnctContext = FnctContext;

QingParser.prototype.fnct = function() {

    var localctx = new FnctContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, QingParser.RULE_fnct);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 28;
        this.match(QingParser.T__0);
        this.state = 29;
        localctx.fname = this.variable();
        this.state = 30;
        this.match(QingParser.LPAREN);
        this.state = 31;
        localctx.args = this.arglist();
        this.state = 32;
        this.match(QingParser.RPAREN);
        this.state = 33;
        this.match(QingParser.T__1);
        this.state = 34;
        localctx.body = this.fbody();
        this.state = 35;
        this.match(QingParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ArglistContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_arglist;
    return this;
}

ArglistContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArglistContext.prototype.constructor = ArglistContext;

ArglistContext.prototype.variable = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableContext);
    } else {
        return this.getTypedRuleContext(VariableContext,i);
    }
};

ArglistContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterArglist(this);
	}
};

ArglistContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitArglist(this);
	}
};

ArglistContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitArglist(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.ArglistContext = ArglistContext;

QingParser.prototype.arglist = function() {

    var localctx = new ArglistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, QingParser.RULE_arglist);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 45;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===QingParser.VARIABLE) {
            this.state = 37;
            this.variable();
            this.state = 42;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===QingParser.T__3) {
                this.state = 38;
                this.match(QingParser.T__3);
                this.state = 39;
                this.variable();
                this.state = 44;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FbodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_fbody;
    this.inits = null; // AssignmentBlockContext
    this.loop = null; // WhileStmtContext
    return this;
}

FbodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FbodyContext.prototype.constructor = FbodyContext;

FbodyContext.prototype.assignmentBlock = function() {
    return this.getTypedRuleContext(AssignmentBlockContext,0);
};

FbodyContext.prototype.whileStmt = function() {
    return this.getTypedRuleContext(WhileStmtContext,0);
};

FbodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterFbody(this);
	}
};

FbodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitFbody(this);
	}
};

FbodyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitFbody(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.FbodyContext = FbodyContext;

QingParser.prototype.fbody = function() {

    var localctx = new FbodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, QingParser.RULE_fbody);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 47;
        localctx.inits = this.assignmentBlock();
        this.state = 48;
        localctx.loop = this.whileStmt();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WhileStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_whileStmt;
    this.cond = null; // ConditionContext
    this.body = null; // WhileBodyContext
    return this;
}

WhileStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WhileStmtContext.prototype.constructor = WhileStmtContext;

WhileStmtContext.prototype.LPAREN = function() {
    return this.getToken(QingParser.LPAREN, 0);
};

WhileStmtContext.prototype.RPAREN = function() {
    return this.getToken(QingParser.RPAREN, 0);
};

WhileStmtContext.prototype.condition = function() {
    return this.getTypedRuleContext(ConditionContext,0);
};

WhileStmtContext.prototype.whileBody = function() {
    return this.getTypedRuleContext(WhileBodyContext,0);
};

WhileStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterWhileStmt(this);
	}
};

WhileStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitWhileStmt(this);
	}
};

WhileStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitWhileStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.WhileStmtContext = WhileStmtContext;

QingParser.prototype.whileStmt = function() {

    var localctx = new WhileStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, QingParser.RULE_whileStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 50;
        this.match(QingParser.T__4);
        this.state = 51;
        this.match(QingParser.LPAREN);
        this.state = 52;
        localctx.cond = this.condition();
        this.state = 53;
        this.match(QingParser.RPAREN);
        this.state = 54;
        this.match(QingParser.T__1);
        this.state = 55;
        localctx.body = this.whileBody();
        this.state = 56;
        this.match(QingParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WhileBodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_whileBody;
    return this;
}

WhileBodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WhileBodyContext.prototype.constructor = WhileBodyContext;


 
WhileBodyContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function CondLoopContext(parser, ctx) {
	WhileBodyContext.call(this, parser);
    this.cond = null; // ConditionalContext;
    WhileBodyContext.prototype.copyFrom.call(this, ctx);
    return this;
}

CondLoopContext.prototype = Object.create(WhileBodyContext.prototype);
CondLoopContext.prototype.constructor = CondLoopContext;

QingParser.CondLoopContext = CondLoopContext;

CondLoopContext.prototype.conditional = function() {
    return this.getTypedRuleContext(ConditionalContext,0);
};
CondLoopContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterCondLoop(this);
	}
};

CondLoopContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitCondLoop(this);
	}
};

CondLoopContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitCondLoop(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function SimpleLooopContext(parser, ctx) {
	WhileBodyContext.call(this, parser);
    this.assigns = null; // AssignmentBlockContext;
    WhileBodyContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SimpleLooopContext.prototype = Object.create(WhileBodyContext.prototype);
SimpleLooopContext.prototype.constructor = SimpleLooopContext;

QingParser.SimpleLooopContext = SimpleLooopContext;

SimpleLooopContext.prototype.assignmentBlock = function() {
    return this.getTypedRuleContext(AssignmentBlockContext,0);
};
SimpleLooopContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterSimpleLooop(this);
	}
};

SimpleLooopContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitSimpleLooop(this);
	}
};

SimpleLooopContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitSimpleLooop(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NestedLoopContext(parser, ctx) {
	WhileBodyContext.call(this, parser);
    this.preassigns = null; // AssignmentBlockContext;
    this.inner = null; // WhileStmtContext;
    this.postassigns = null; // AssignmentBlockContext;
    WhileBodyContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NestedLoopContext.prototype = Object.create(WhileBodyContext.prototype);
NestedLoopContext.prototype.constructor = NestedLoopContext;

QingParser.NestedLoopContext = NestedLoopContext;

NestedLoopContext.prototype.whileStmt = function() {
    return this.getTypedRuleContext(WhileStmtContext,0);
};

NestedLoopContext.prototype.assignmentBlock = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AssignmentBlockContext);
    } else {
        return this.getTypedRuleContext(AssignmentBlockContext,i);
    }
};
NestedLoopContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterNestedLoop(this);
	}
};

NestedLoopContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitNestedLoop(this);
	}
};

NestedLoopContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitNestedLoop(this);
    } else {
        return visitor.visitChildren(this);
    }
};



QingParser.WhileBodyContext = WhileBodyContext;

QingParser.prototype.whileBody = function() {

    var localctx = new WhileBodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, QingParser.RULE_whileBody);
    var _la = 0; // Token type
    try {
        this.state = 67;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            localctx = new SimpleLooopContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 58;
            localctx.assigns = this.assignmentBlock();
            break;

        case 2:
            localctx = new NestedLoopContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 60;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===QingParser.VARIABLE) {
                this.state = 59;
                localctx.preassigns = this.assignmentBlock();
            }

            this.state = 62;
            localctx.inner = this.whileStmt();
            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===QingParser.VARIABLE) {
                this.state = 63;
                localctx.postassigns = this.assignmentBlock();
            }

            break;

        case 3:
            localctx = new CondLoopContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 66;
            localctx.cond = this.conditional();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AssignmentBlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_assignmentBlock;
    return this;
}

AssignmentBlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignmentBlockContext.prototype.constructor = AssignmentBlockContext;

AssignmentBlockContext.prototype.assignment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AssignmentContext);
    } else {
        return this.getTypedRuleContext(AssignmentContext,i);
    }
};

AssignmentBlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterAssignmentBlock(this);
	}
};

AssignmentBlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitAssignmentBlock(this);
	}
};

AssignmentBlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitAssignmentBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.AssignmentBlockContext = AssignmentBlockContext;

QingParser.prototype.assignmentBlock = function() {

    var localctx = new AssignmentBlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, QingParser.RULE_assignmentBlock);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 69;
            this.assignment();
            this.state = 72; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===QingParser.VARIABLE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AssignmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_assignment;
    this.left = null; // VariableContext
    this.right = null; // ExpressionContext
    return this;
}

AssignmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignmentContext.prototype.constructor = AssignmentContext;

AssignmentContext.prototype.EQ = function() {
    return this.getToken(QingParser.EQ, 0);
};

AssignmentContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

AssignmentContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

AssignmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterAssignment(this);
	}
};

AssignmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitAssignment(this);
	}
};

AssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.AssignmentContext = AssignmentContext;

QingParser.prototype.assignment = function() {

    var localctx = new AssignmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, QingParser.RULE_assignment);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 74;
        localctx.left = this.variable();
        this.state = 75;
        this.match(QingParser.EQ);
        this.state = 76;
        localctx.right = this.expression(0);
        this.state = 77;
        this.match(QingParser.T__5);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConditionalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_conditional;
    this.cond = null; // ConditionContext
    this.condtrue = null; // AssignmentBlockContext
    this.condfalse = null; // AssignmentBlockContext
    return this;
}

ConditionalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConditionalContext.prototype.constructor = ConditionalContext;

ConditionalContext.prototype.LPAREN = function() {
    return this.getToken(QingParser.LPAREN, 0);
};

ConditionalContext.prototype.RPAREN = function() {
    return this.getToken(QingParser.RPAREN, 0);
};

ConditionalContext.prototype.condition = function() {
    return this.getTypedRuleContext(ConditionContext,0);
};

ConditionalContext.prototype.assignmentBlock = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AssignmentBlockContext);
    } else {
        return this.getTypedRuleContext(AssignmentBlockContext,i);
    }
};

ConditionalContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterConditional(this);
	}
};

ConditionalContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitConditional(this);
	}
};

ConditionalContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitConditional(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.ConditionalContext = ConditionalContext;

QingParser.prototype.conditional = function() {

    var localctx = new ConditionalContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, QingParser.RULE_conditional);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 79;
        this.match(QingParser.T__6);
        this.state = 80;
        this.match(QingParser.LPAREN);
        this.state = 81;
        localctx.cond = this.condition();
        this.state = 82;
        this.match(QingParser.RPAREN);
        this.state = 83;
        this.match(QingParser.T__1);
        this.state = 84;
        localctx.condtrue = this.assignmentBlock();
        this.state = 85;
        this.match(QingParser.T__2);
        this.state = 86;
        this.match(QingParser.T__7);
        this.state = 87;
        this.match(QingParser.T__1);
        this.state = 88;
        localctx.condfalse = this.assignmentBlock();
        this.state = 89;
        this.match(QingParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConditionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_condition;
    this.left = null; // ExpressionContext
    this.op = null; // RelopContext
    this.right = null; // ExpressionContext
    return this;
}

ConditionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConditionContext.prototype.constructor = ConditionContext;

ConditionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ConditionContext.prototype.relop = function() {
    return this.getTypedRuleContext(RelopContext,0);
};

ConditionContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterCondition(this);
	}
};

ConditionContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitCondition(this);
	}
};

ConditionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitCondition(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QingParser.ConditionContext = ConditionContext;

QingParser.prototype.condition = function() {

    var localctx = new ConditionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, QingParser.RULE_condition);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        localctx.left = this.expression(0);
        this.state = 92;
        localctx.op = this.relop();
        this.state = 93;
        localctx.right = this.expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QingParser.RULE_expression;
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;

ExpressionContext.prototype.LPAREN = function() {
    return this.getToken(QingParser.LPAREN, 0);
};

ExpressionContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ExpressionContext.prototype.RPAREN = function() {
    return this.getToken(QingParser.RPAREN, 0);
};

ExpressionContext.prototype.atom = function() {
    return this.getTypedRuleContext(AtomContext,0);
};

ExpressionContext.prototype.PLUS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(QingParser.PLUS);
    } else {
        return this.getToken(QingParser.PLUS, i);
    }
};


ExpressionContext.prototype.MINUS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(QingParser.MINUS);
    } else {
        return this.getToken(QingParser.MINUS, i);
    }
};


ExpressionContext.prototype.POW = function() {
    return this.getToken(QingParser.POW, 0);
};

ExpressionContext.prototype.TIMES = function() {
    return this.getToken(QingParser.TIMES, 0);
};

ExpressionContext.prototype.DIV = function() {
    return this.getToken(QingParser.DIV, 0);
};

ExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.enterExpression(this);
	}
};

ExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof QingListener ) {
        listener.exitExpression(this);
	}
};

ExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QingVisitor ) {
        return visitor.visitExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


